# simple-ray-tracing

./: CMakeLists.txt  README.md  img.ppm
imgs/: color_box.ppm  cornell_box.ppm  earth.ppm  random_scene.ppm  two_perlin_spheres.ppm  two_spheres.ppm
include/: camera.h  color.h  ray.h  rtweekend.h  sphere.h  vec3.h
include/camera/: camera.h
include/color/: color.h
include/geometry/: aabb.h  box.h  bvh.h  geometry.h  hittable.h  hittable_list.h  moving_sphere.h  rectangle.h  sphere.h  transforms.h
include/material/: Material.h  dielectric.h  diffuse_light.h  lambertian.h  light_source.h  material.h  metal.h
include/ray/: ray.h
include/texture/: Texture.h  checker_texture.h  image_texture.h  mixed_texture.h  perlin.h  solid_color.h  texture.h
include/vector/: color.h  vec3.h
src/: color.cpp  hittable_list.cpp  main.cpp  sphere.cpp  vec3.cpp
src/color/: color.cpp
src/geometry/: aabb.cpp  box.cpp  bvh.cpp  hittable_list.cpp  moving_sphere.cpp  rectangle.cpp  sphere.cpp  transforms.cpp
src/material/: dielectric.cpp  lambertian.cpp  metal.cpp
src/texture/: image_texture.cpp  perlin.cpp
src/vector/: color.cpp  vec3.cpp
